--- a/templates/base.html
+++ b/templates/base.html
@@ -757,7 +757,11 @@
                             <a href="{% url 'dashboard' %}" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-700 text-gray-700 dark:text-gray-300">
                                 <i class="fas fa-tachometer-alt ml-2"></i> لوحة التحكم
                             </a>
-
+                            {% if user.is_superuser %}
+                            <a href="{% url 'control_dashboard' %}" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-700 text-gray-700 dark:text-gray-300">
+                                <i class="fas fa-tachometer-alt ml-2"></i> للوحة التحكم الرئسية  
+                            </a>
+                            {% endif %}
                             <a href="{% url 'profile' %}" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-700 text-gray-700 dark:text-gray-300">
                                 <i class="fas fa-user ml-2"></i> الملف الشخصي
                             </a>
